giving the extarnal values from the application.properties file without any mapping and implementing method  .

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port = 8081
+
+neeraj.jsm.username=Keerthi 
+neeraj.jsm.userpass=KeerthiProfinch@123
+neeraj.jsm.url=Keerthi@profinch.com
+
+neeraj.username=Neeraj Patel
+neeraj.userpass=NeerajProfinch@123
+neeraj.url=neeraj@profinch.com
